feat(Database): setup database migrations and establish connection

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-HOST=localhost
-PORT=5432
-USERNAME=postgres
-PASS=changeme
-DBNAME=todo
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=Letmein@1
+POSTGRES_DB=postgres
