--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-query": "^3.5.5"
+    "react-query": "^3.5.5",
+    "sass": "^1.30.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
