--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-query": "^3.5.5",
-    "sass": "^1.30.0"
+    "sass": "^1.30.0",
+    "use-debounce": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
