--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,14 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^1.3.0",
     "axios": "^0.21.1",
     "http-proxy-middleware": "^1.0.6",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-hook-form": "^6.14.0",
     "react-query": "^3.5.5",
     "sass": "^1.30.0",
-    "use-debounce": "^5.2.0"
+    "use-debounce": "^5.2.0",
+    "zod": "^1.11.11"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
